implemented logic of sending a request on server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vorota_app",
+  "homepage": "https://jacobstrazhevskyi.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
