--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vorota_app",
-  "homepage": "https://jacobstrazhevskyi.github.io/",
+  "homepage": "https://jacobstrazhevskyi.github.io/vorota_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
